# lingmo-core

./: .gitignore  APKBUILD  CMakeLists.txt  OpenLingmo_version  build  cute  kodiak.toml  lingmo  opencute_version
.devcontainer/: devcontainer.json
.github/workflows/: Auto CI Test Build.yml  build.yml  release.yml
chotkeys/: CMakeLists.txt  application.cpp  application.h  hotkeys.cpp  main.cpp
chotkeys/QHotkey/: qhotkey_x11.cpp
clipboard/: CMakeLists.txt  clipboard.cpp  clipboard.h  main.cpp
cpufreq/: CMakeLists.txt  com.cute.cpufreq.pkexec.policy.in  main.cpp
cupdatecursor/: CMakeLists.txt  main.cpp
debian/: changelog  control  copyright  postinst  prerm  watch
gmenuproxy/: CMakeLists.txt  actions.h  cute-gmenuproxy.service.in  dbusmenuadaptor.cpp  dbusmenuadaptor.h  menu.cpp  menuproxy.cpp  window.cpp  window.h
hotkey-server/: CMakeLists.txt  dbushelper.h  global_shorcut_interface.cpp  global_shortcut_interface.cpp  global_shortcut_interface.h  hotkey_manager.cpp  hotkey_manager.h  hotkey_server.cpp  hotkey_server.h  input-event-codes-mapper.h  keycode_helper.cpp  keycode_helper.h  main.cpp  org.lingmo.core.globalshortcut.xml
notificationd/: CMakeLists.txt  application.cpp  application.h  com.cute.Notification.xml  datehelper.cpp  historymodel.cpp  historymodel.h  main.cpp  notification.cpp  notification.h  notificationpopup.cpp  notificationpopup.h  notificationserver.cpp  notificationwindow.cpp  notificationwindow.h  screenhelper.cpp  screenhelper.h  settings.cpp  settings.h  utils.cpp  utils.h
notificationd/dbus/: notificationsadaptor.cpp  notificationsadaptor.h
notificationd/qml/: IconButton.qml  NotificationWindow.qml  QmlNotificationPopup.qml  main.qml
polkit-agent/: CMakeLists.txt  cute-polkit-agent.desktop  dialog.cpp  dialog.h  main.cpp  main.qml  polkitagentlistener.cpp  polkitagentlistener.h
powerman/: CMakeLists.txt  application.cpp  application.h  com.cute.PowerManager.xml  dimdisplayaction.cpp  main.cpp
powerman/cpu/: com.cute.CPUManagement.xml  cpuitem.cpp  cpuitem.h  cpumanagement.cpp  cpumanagement.h
screen-brightness/: CMakeLists.txt  brightnesshelper.cpp  brightnesshelper.h  com.cute.brightness.pkexec.policy.in  com.lingmo.brightness.pkexec.policy.in  main.cpp
sddm-helper/: CMakeLists.txt  com.cute.sddm.helper.pkexec.policy.in  main.cpp
session/: CMakeLists.txt  application.cpp  application.h  com.cute.Session.xml  cute-xsession.desktop  daemon-helper.cpp  daemon-helper.h  job_private.hpp  lingmo-wayland-session.desktop  main.cpp  networkproxymanager.cpp  networkproxymanager.h  process.cpp  process.h  processmanager.cpp  processmanager.h
session/wayland_wrapper/: CMakeLists.txt  UpdateLaunchEnvironment.cpp  UpdateLaunchEnvironment.hpp  signalhandler.cpp
settings-daemon/: CMakeLists.txt  application.cpp  application.h  dbusadaptor.h  main.cpp
settings-daemon/battery/: battery.cpp  battery.h  com.cute.PrimaryBattery.xml  upowerdevice.cpp  upowerdevice.h
settings-daemon/brightness/: brightnessmanager.cpp  brightnessmanager.h  com.cute.Brightness.xml
settings-daemon/dock/: com.cute.Dock.xml  dock.cpp  dock.h
settings-daemon/language/: com.cute.Language.xml  language.cpp  language.h
settings-daemon/mouse/: com.cute.Mouse.xml  libinputsettings.cpp  mousemanager.cpp  mousemanager.h  x11libinputdummydevice.cpp  x11libinputdummydevice.h
settings-daemon/theme/: com.cute.Theme.xml  com.lingmo.Theme.xml  thememanager.cpp  thememanager.h
settings-daemon/touchpad/: com.cute.Touchpad.xml  touchpadmanager.cpp  touchpadmanager.h
settings-daemon/touchpad/x11/: libinputtouchpad.cpp  libinputtouchpad.h  propertyinfo.cpp  propertyinfo.h  synapticstouchpad.cpp  xlibbackend.cpp  xlibbackend.h  xlibnotifications.h  xrecordkeyboardmonitor.h
settings-daemon/translations/: ar_AA.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  mg.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  (+6 more)
shutdown-ui/: CMakeLists.txt  IconButton.qml  actions.cpp  actions.h  main.cpp  main.qml
startlingmo/: CMakeLists.txt  UpdateLaunchEnvironment.cpp  daemon-helper.cpp  daemon-helper.h  lingmo-wayland-session.desktop  lingmo-xorg-session.desktop  property.cpp  property.hpp  signalhandler.cpp  startlingmo-wayland.cpp  startlingmo-x11.cpp  startlingmo.cpp  startlingmo.hpp
startlingmo/cmake/: FindKWinPath.cmake
startlingmo/lingmo-session/: CMakeLists.txt  application.cpp  application.h  com.lingmo.Session.xml  daemon-helper.cpp  daemon-helper.h  main.cpp  org.lingmo.Startup.xml  processmanager.cpp  processmanager.h  sessiontrack.h  singleton.h  startup.cpp  startup.hpp
startlingmo/lingmo-session-old/: README  sessiontrack.cpp
startlingmo/wayland_wrapper/: CMakeLists.txt  kwin_wrapper.cpp
wallpaper-color-pick/: cute-wallpaper-color-pick
xembed-sni-proxy/: CMakeLists.txt  debug.cpp  fdoselectionmanager.cpp  fdoselectionmanager.h  main.cpp  sniproxy.cpp  sniproxy.h  xcbutils.h
